kubernetes/k8s_backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-heale-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-heale
  template:
    metadata:
      labels:
        app: backend-heale
    spec:
      containers:
      - name: backend-heale
        image: ravailhe/backendcloud
        ports:
        - containerPort: 3001
