kubernetes/k8s_frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-heale-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-heale
  template:
    metadata:
      labels:
        app: frontend-heale
    spec:
      containers:
      - name: frontend-heale
        image: ravailhe/frontendcloud
        ports:
        - containerPort: 3000
