kubernetes/k8s_backend_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend-heale-service
spec:
  type: LoadBalancer
  selector:
    app: backend-heale
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
