kubernetes/k8s_frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-heale-service
spec:
  type: NodePort
  selector:
    app: frontend-heale
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
