kubernetes/k8s_mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-heale-service
spec:
  type: ClusterIP
  selector:
    app: database-heale
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
